[JENKINS-24602] Native support for cloc tool
- Parsing of cloc report files (XML variant).
- Conversion to SLOCCount internal representation that is used in the plugin.
- Improved help strings in configuration page.

--- a/src/main/resources/hudson/plugins/sloccount/SloccountPublisher/help-encoding.html
+++ b/src/main/resources/hudson/plugins/sloccount/SloccountPublisher/help-encoding.html
@@ -1,1 +1,3 @@
-The character encoding of SLOCCount result files. If no value is set, default 'UTF-8' will be used.
+The character encoding of SLOCCount result files. If no value is set, default
+'UTF-8' will be used. This option is considered only in the SLOCCount report
+parser and is ignored in the cloc one.
